# cat-coin-airdrop

./: .env.example  .gitignore  README.md  TEST_RESULTS.md  index.html  package-lock.json  package.json  vite.config.ts
contracts/: Anchor.toml  Cargo.toml  README.md  airdrop.rs  cat_token.rs  lib.rs  presale.rs
public/: address-generator-worker.js
scripts/: generate-cat-address.js
src/: App.tsx  index.css  main.tsx
src/components/: AddressGenerator.tsx  AirdropContainer.tsx  ClaimSection.tsx  CountdownTimer.tsx  EligibilityCheck.tsx  PaymentPopup.tsx  PresaleSection.tsx  RentRecovery.tsx  SocialTasks.tsx  TokenInfo.tsx  WalkingCatAnimation.tsx  WalletProvider.tsx
src/hooks/: useAirdrop.ts  usePresale.ts  useWallet.ts
src/integrations/supabase/: client.ts  types.ts
src/pages/: AirdropPage.tsx  GeneratorPage.tsx  Index.tsx
src/test/: hookTests.ts  smartContractTest.ts
src/utils/: solana.ts
supabase/: config.toml
supabase/functions/process-airdrop/: index.ts
supabase/migrations/: 20250611093243-7a085ddb-3fe2-4994-80d0-e6a8a108c9ae.sql
