[package]
name = "cat-coin-contracts"
version = "0.1.0"
description = "CAT COIN Smart Contracts for Airdrop and Presale"
edition = "2021"
license = "MIT"
homepage = ""
documentation = ""
repository = ""
readme = "README.md"

[lib]
crate-type = ["cdylib", "lib"]
name = "cat_coin_contracts"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"

[dev-dependencies]
solana-program-test = "~1.16.0"
solana-sdk = "~1.16.0"
spl-token = { version = "~4.0.0", features = ["no-entrypoint"] }
tokio = { version = "1.0", features = ["macros"] }

[[bin]]
name = "cat_token"
path = "cat_token.rs"

[[bin]]
name = "airdrop"
path = "airdrop.rs"

[[bin]]
name = "presale"
path = "presale.rs"